Mobile: fix menu z-index

--- a/blocks/m-layout/css/m-layout.css
+++ b/blocks/m-layout/css/m-layout.css
@@ -15,7 +15,7 @@
 
 .m-layout__menu-wrap {
 	position: fixed;
-	z-index: -1;
+	/*z-index: -1;*/
 	top: 0;
 	right: 0;
 	bottom: 0;
